style sheet test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BUSHIDO</title>
+    <title>BUSHIDO</title> 
+    <link rel="styles.css" href="styles.css" type="text/css">
   </head>
   <body>
   <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></IMG>       </center>
