--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BUSHIDO</title> 
-    <link rel="styles.css" href="styles.css" type="text/css">
+    <link rel="styles.css" href="styles.css" type="css">
   </head>
   <body>
   <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></IMG>       </center>
