style sheet test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></IMG></center>
  
- <section id="text">
+ <section class="text">
  <p> Bushido literally meaning "the way of the warrior" is a Japanese word for the way of the samurai life, loosely analogous to the concept of chivalry in Europe.</p></section>
 
 <section id="text">
