style sheet test

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <p>The "way" itself originates from the samurai moral values, most commonly stressing some combination of frugality, loyalty, martial arts mastery, and honor until death. Born from Neo-Confucianism during times of peace in Tokugawa Japan and following Confucian texts, Bushido was also influenced by Shinto and Zen Buddhism, allowing the violent existence of the samurai to be tempered by wisdom and serenity. Bushido developed between the 16th and 20th centuries, debated by pundits who believed they were building on a legacy dating back to the 10th century, although some scholars have noted that the term bushido itself is "rarely attested in premodern literature".</p>
 
 
-<p>Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p></section></h2>
+<p>Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p></h2>
 
-<center><IMG class=samurai2 SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
+<center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
 </center>
 <center><table border=1>
     <th><h1>The Seven Virtues<br> 
