Added files via upload

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p class="text">Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p></h2>
 
-<center><IMG p class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
+<center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
 </section></center>
 <center><table border=1>
     <th><h1>The Seven Virtues<br> 
@@ -46,6 +46,7 @@
   <button type="<a href=get "http://www.samurai-archives.com/"></a>YES</button>
 </form>
 
+<ul>
 <p><h2>Books on Bushido</h2></p>
 <p>Hagakure: The Book of the Samurai. 
 by Tsunetomo Yamamoto</p>
@@ -54,7 +55,8 @@ by Inazo Nitobe</p>
 <p>Code of the Samurai: A Modern Translation of the Bushido Shoshinshu of Taira Shigesuke
 by Daidoji Yuzan</p>
 <p>A Book of Five Rings: The Classic Guide to Strategy 
-by Miyamoto Musashi </p> 
+by Miyamoto Musashi </p>
+</ul>
 <a href="http://www.goodreads.com/shelf/show/bushido">To Buy These Books</a>
 <p><a href="http://www.history.com/topics/samurai-and-bushido">Here's a Good Website from the History Channel</a></p>
 
