Added files via upload

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p class="text">Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p></h2>
 
-<center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
+<center><p class="samurai2"><IMG SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG></p>     
 </section></center>
 <center><table border=1>
     <th><h1>The Seven Virtues<br> 
