--- a/index.html
+++ b/index.html
@@ -16,27 +16,26 @@
 
 <p class="text">Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p></h2>
 
-<center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG>     
-</section></center>
+<center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG></center>     
+
+<section id="table">
 <center><table border=1>
     <th><h1>The Seven Virtues<br> 
     of Bushido </h1></th>
-   
-  
-  <tr>
+    <tr>
     <td><center><h3>Rectitude</h3></center></td>
- </tr>
-  <tr>
+    </tr>
+    <tr>
     <td><center><h3>Courage</h3></center></td>
-  </tr>
+    </tr>
     <td><center><h3>Benevolence</h3></center></td>
-  <tr>
-  <td><center><h3>Respect</h3></center></td>
-  </tr>
-  <tr><td><center><h3>Honesty</h3></center></td></tr>
-  <tr><td><center><h3>Honor</h3></center></td></tr>
-  <tr><td><center><h3>Loyalty</h3></center></td></tr>
-</table></center>
+      <tr>
+      <td><center><h3>Respect</h3></center></td>
+      </tr>
+      <tr><td><center><h3>Honesty</h3></center></td></tr>
+      <tr><td><center><h3>Honor</h3></center></td></tr>
+      <tr><td><center><h3>Loyalty</h3></center></td></tr>
+  </table></center></section>
 <form action="login" method=get "http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
