Added files via upload

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG></center>     
 
-<section id="table">
-<center><table border=1>
+
+<center><table border=1><section id="table">
     <th><h1>The Seven Virtues<br> 
     of Bushido </h1></th>
     <tr>
@@ -35,7 +35,7 @@
       <tr><td><center><h3>Honesty</h3></center></td></tr>
       <tr><td><center><h3>Honor</h3></center></td></tr>
       <tr><td><center><h3>Loyalty</h3></center></td></tr>
-  </table></center></section>
+</section></table></center>
 <form action="login" method=get "http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
