--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG></center>     
 
 
-<center><table border=1><section id="table">
+<section id="table"><center><table border=1>
     <th><h1>The Seven Virtues<br> 
     of Bushido </h1></th>
     <tr>
@@ -35,7 +35,7 @@
       <tr><td><center><h3>Honesty</h3></center></td></tr>
       <tr><td><center><h3>Honor</h3></center></td></tr>
       <tr><td><center><h3>Loyalty</h3></center></td></tr>
-</section></table></center>
+</table></center></section>
 <form action="login" method=get "http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
