Added files via upload

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></IMG></center>     
 
 
-<section id="table"><center><table border=1>
+<center><table border=1>
     <th><h1>The Seven Virtues<br> 
     of Bushido </h1></th>
     <tr>
@@ -35,7 +35,7 @@
       <tr><td><center><h3>Honesty</h3></center></td></tr>
       <tr><td><center><h3>Honor</h3></center></td></tr>
       <tr><td><center><h3>Loyalty</h3></center></td></tr>
-</table></center></section>
+</table></center>
 <form action="login" method=get "http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
@@ -45,7 +45,7 @@
   <button type="<a href=get "http://www.samurai-archives.com/"></a>YES</button>
 </form>
 
-<ul>
+<ul><section id="table">
 <p><h2>Books on Bushido</h2></p>
 <p>Hagakure: The Book of the Samurai. 
 by Tsunetomo Yamamoto</p>
@@ -54,7 +54,7 @@ by Inazo Nitobe</p>
 <p>Code of the Samurai: A Modern Translation of the Bushido Shoshinshu of Taira Shigesuke
 by Daidoji Yuzan</p>
 <p>A Book of Five Rings: The Classic Guide to Strategy 
-by Miyamoto Musashi </p>
+by Miyamoto Musashi </p></section>
 </ul>
 <a href="http://www.goodreads.com/shelf/show/bushido">To Buy These Books</a>
 <p><a href="http://www.history.com/topics/samurai-and-bushido">Here's a Good Website from the History Channel</a></p>
