--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
   </div>
   
-  <button type="<a href=get "http://www.samurai-archives.com/"></a>YES</button>
+  <button type=get "<a href=url "http://www.samurai-archives.com/"></a>YES</button>
 </form>
 
 <ul><section id="table">
