--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <tr><td><center><h3>Honor</h3></center></td></tr>
       <tr><td><center><h3>Loyalty</h3></center></td></tr>
 </table></center>
-<form action="login" method="http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
+<form action="http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
     
   </div>
   
-  <button type=get "<a href=url "http://www.samurai-archives.com/"></a>YES</button>
+  <button type=post "<a href=url "http://www.samurai-archives.com/"></a>YES</button>
 </form>
 
 <ul><section id="table">
