--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></center>     
 
 
-  <center><table border=1>
+  <table border=1 class="virtues">
     <th><h1>The Seven Virtues<br> 
     of Bushido </h1></th>
     <tr>
@@ -35,7 +35,7 @@
       <tr><td><center><h3>Honesty</h3></center></td></tr>
       <tr><td><center><h3>Honor</h3></center></td></tr>
       <tr><td><center><h3>Loyalty</h3></center></td></tr>
-</table></center>
+</table>
 <form action="http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
   <div>
     <label>Do You Think Samurais Are Cool?</label>
@@ -44,7 +44,6 @@
   
   <button type=post "<a href=url "http://www.samurai-archives.com/"></a>YES</button>
 </form>
-
 <ul>
   <section id="table">
   <p><h2>Books on Bushido</h2></p>
@@ -59,9 +58,5 @@ by Miyamoto Musashi </p></section>
 </ul>
 <a href="http://www.goodreads.com/shelf/show/bushido">To Buy These Books</a>
   <p><a href="http://www.history.com/topics/samurai-and-bushido">Here's a Good Website from the History Channel</a></p>
-
-
-
   </body>
-
 </html>
