--- a/index.html
+++ b/index.html
@@ -1,62 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BUSHIDO</title> 
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <title>Energy Drinks</title>
+    <link rel="styles_sheet" href="styles_sheet.css" type="text/css">
   </head>
   <body>
-    <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></center>
- 
- 
-  <p class="text"> Bushido literally meaning "the way of the warrior" is a Japanese word for the way of the samurai life, loosely analogous to the concept of chivalry in Europe.
+  	<div.fixed>Drink Energy Drinks</div.fixed>
+  	<div id="container">This is a sidebar about energy drinks.
+  	</div>
 
+  	<center><IMG SRC="Red-Bull.jpeg" ALT="Red Bull" WIDTH=350 HEIGHT=350></center>
+  	<ul>
+  		<p>Popular Energy Drinks:</p>
+  		<p>Red Bull</p>
+  		<p>Rock Star</p>
+  		<p>Monster</p>
+  	</ul>
+    <h1 class="header"><center>Why Are Energy Drinks Good</center></h1>
+    <p class="para" id="border">Energy drinks are good because they give you energy. Blah, blah, blah.</p>
+    <p class="para"> Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah.</p>
 
-  <p class="text">The "way" itself originates from the samurai moral values, most commonly stressing some combination of frugality, loyalty, martial arts mastery, and honor until death. Born from Neo-Confucianism during times of peace in Tokugawa Japan and following Confucian texts, Bushido was also influenced by Shinto and Zen Buddhism, allowing the violent existence of the samurai to be tempered by wisdom and serenity. Bushido developed between the 16th and 20th centuries, debated by pundits who believed they were building on a legacy dating back to the 10th century, although some scholars have noted that the term bushido itself is "rarely attested in premodern literature".</p>
+    <h4 class="header"><center>Rock Star Energy Drinks</center></h4>
+    <p class="para_border">I'm drinking a Rock Star energy drink right now, simply because it was on sale at Walgreens.</p>
+    <p class="para_border">I'm drinking a Rock Star energy drink right now, simply because it was on sale at Walgreens.</p>
+    <p class="para_border">I'm drinking a Rock Star energy drink right now, simply because it was on sale at Walgreens.</p>
 
+    <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="energydrinks.html">Energy Drinks</a></li>
+  <li><a href="energydrinks2.html">More Energy Drinks</a></li>
+  </ul>
 
-  <p class="text">Under the Tokugawa Shogunate, some aspects of warrior values became formalized into Japanese feudal law.</p>
-
-  <center><IMG class="samurai2" SRC="samurai2.gif.jpeg" ALT="Bushido" WIDTH=350 HEIGHT=350></center>     
-
-
-  <table border=1 class="virtues">
-    <th><h1>The Seven Virtues<br> 
-    of Bushido </h1></th>
-    <tr>
-    <td><center><h3>Rectitude</h3></center></td>
-    </tr>
-    <tr>
-    <td><center><h3>Courage</h3></center></td>
-    </tr>
-    <td><center><h3>Benevolence</h3></center></td>
-      <tr>
-      <td><center><h3>Respect</h3></center></td>
-      </tr>
-      <tr><td><center><h3>Honesty</h3></center></td></tr>
-      <tr><td><center><h3>Honor</h3></center></td></tr>
-      <tr><td><center><h3>Loyalty</h3></center></td></tr>
-</table>
-<form action="http://www.history.com/topics/samurai-and-bushido/videos/deconstructing-history-samurai"</form>
-  <div>
-    <label>Do You Think Samurais Are Cool?</label>
-    
-  </div>
-  
-  <button type=post "<a href=url "http://www.samurai-archives.com/"></a>YES</button>
-</form>
-<ul>
-  <section id="table">
-  <p><h2>Books on Bushido</h2></p>
-  <p>Hagakure: The Book of the Samurai. 
-by Tsunetomo Yamamoto</p>
-  <p>Bushido: The Soul of Japan. A Classic Essay on Samurai Ethics 
-by Inazo Nitobe</p>
-  <p>Code of the Samurai: A Modern Translation of the Bushido Shoshinshu of Taira Shigesuke
-by Daidoji Yuzan</p>
-  <p>A Book of Five Rings: The Classic Guide to Strategy 
-by Miyamoto Musashi </p></section>
-</ul>
-<a href="http://www.goodreads.com/shelf/show/bushido">To Buy These Books</a>
-  <p><a href="http://www.history.com/topics/samurai-and-bushido">Here's a Good Website from the History Channel</a></p>
   </body>
 </html>
