--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Energy Drinks</title>
-    <link rel="styles_sheet" href="styles_sheet.css" type="text/css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
   <body>
   	<div.fixed>Drink Energy Drinks</div.fixed>
@@ -27,8 +27,8 @@
 
     <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="energydrinks.html">Energy Drinks</a></li>
-  <li><a href="energydrinks2.html">More Energy Drinks</a></li>
+  <li><a href="pg2.html">Energy Drinks</a></li>
+  <li><a href="pg3.html">More Energy Drinks</a></li>
   </ul>
 
   </body>
