--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   	<div.fixed>Drink Energy Drinks</div.fixed>
   	<div id="container">This is a sidebar about energy drinks.
   	</div>
-
-  	<center><IMG SRC="Red-Bull.jpeg" ALT="Red Bull" WIDTH=350 HEIGHT=350></center>
+    <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></center>
+  	<center><IMG SRC="Red-Bull.gif.jpeg" ALT="Red Bull" WIDTH=350 HEIGHT=350></center>
   	<ul>
   		<p>Popular Energy Drinks:</p>
   		<p>Red Bull</p>
