--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
   <body>
-  	<div.fixed>Drink Energy Drinks</div.fixed>
-  	<div id="container">This is a sidebar about energy drinks.
+  	<div class="fixed">Drink Energy Drinks</div>
+  	
+    <div id="container">This is a sidebar about energy drinks. Energy Drinks are good for you!
   	</div>
-    <center><IMG SRC="samurai.gif.jpeg" ALT="The Way of the Warrior" WIDTH=350 HEIGHT=350></center>
+    
+    <center><IMG SRC="samurai.gif.jpeg" ALT="I had too many Red Bulls." WIDTH=350 HEIGHT=350></center>
   	
   	<ul>
   		<p>Popular Energy Drinks:</p>
@@ -16,6 +18,7 @@
   		<p>Rock Star</p>
   		<p>Monster</p>
   	</ul>
+    
     <h1 class="header"><center>Why Are Energy Drinks Good</center></h1>
     <p class="para" id="border">Energy drinks are good because they give you energy. Blah, blah, blah.</p>
     <p class="para"> Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah. Blah, blah, blah.</p>
@@ -27,8 +30,8 @@
 
     <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="pg2.html">Energy Drinks</a></li>
-  <li><a href="pg3.html">More Energy Drinks</a></li>
+  <li><a href="pg_2.html">Energy Drinks</a></li>
+  <li><a href="pg_3.html">More Energy Drinks</a></li>
   </ul>
 
   </body>
